@@ -178,8 +178,8 @@ static GameDefs g = {
 	1,	// GM_REPORT
 	0,	// DECAY
 	1,	// LIMITED_MAGES_PER_BUILDING
-	//GameDefs::REPORT_SHOW_EVERYTHING, // TRANSIT_REPORT
-	GameDefs::REPORT_NOTHING, // TRANSIT_REPORT
+	GameDefs::REPORT_SHOW_EVERYTHING, // TRANSIT_REPORT
+	//GameDefs::REPORT_NOTHING, // TRANSIT_REPORT
 	0,  // MARKETS_SHOW_ADVANCED_ITEMS
 	0,	// USE_PREPARE_COMMAND
 	15,	// MONSTER_ADVANCE_MIN_PERCENT
